--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@ div {
     padding-top: 50px;
 }
 
-div input {
+input {
     border-color: rgb(22, 21, 21);
     padding: 7px;
 }
 
-div button {
+button {
     padding: 7px;
     color: rgb(17, 17, 17);
     background-color: rgb(241, 235, 235);
@@ -22,7 +22,7 @@ div button {
     cursor: pointer;
 }
 
-div button:hover {
+button:hover {
     color: rgb(59, 58, 58);
     box-shadow: 0px 0px 10px gainsboro;
 }
